--- a/config.yaml
+++ b/config.yaml
@@ -22,39 +22,39 @@ steps:
        namespaces: 1
        tuningSet: Sequence
        operationTimeout: 15m
-#
-# - module:
-#     path: modules/env-variable-test/main.yaml
-#     params:
-#       actionName: "create"
-#       namespaces: 1
-#       tuningSet: Sequence
-#       operationTimeout: 15m
-#
-# - module:
-#     path: modules/volume-test/main.yaml
-#     params:
-#       actionName: "create"
-#       namespaces: 1
-#       tuningSet: Sequence
-#       operationTimeout: 15m
-#
-# - module:
-#     path: modules/security-setting-test/main.yaml
-#     params:
-#       actionName: "create"
-#       namespaces: 1
-#       tuningSet: Sequence
-#       operationTimeout: 15m
-#
-# - module:
-#     path: modules/command-test/main.yaml
-#     params:
-#       actionName: "create"
-#       namespaces: 1
-#       tuningSet: Sequence
-#       operationTimeout: 15m
-#
+
+ - module:
+     path: modules/env-variable-test/main.yaml
+     params:
+       actionName: "create"
+       namespaces: 1
+       tuningSet: Sequence
+       operationTimeout: 15m
+
+ - module:
+     path: modules/volume-test/main.yaml
+     params:
+       actionName: "create"
+       namespaces: 1
+       tuningSet: Sequence
+       operationTimeout: 15m
+
+ - module:
+     path: modules/security-setting-test/main.yaml
+     params:
+       actionName: "create"
+       namespaces: 1
+       tuningSet: Sequence
+       operationTimeout: 15m
+
+ - module:
+     path: modules/command-test/main.yaml
+     params:
+       actionName: "create"
+       namespaces: 1
+       tuningSet: Sequence
+       operationTimeout: 15m
+
  - module:
      path: modules/access-type-test/main.yaml
      params:
@@ -62,73 +62,70 @@ steps:
        namespaces: 1
        tuningSet: Sequence
        operationTimeout: 15m
-#
-# - module:
-#     path: modules/label-test/main.yaml
-#     params:
-#       actionName: "create"
-#       namespaces: 1
-#       tuningSet: Sequence
-#       operationTimeout: 15m
-#
-# - module:
-#     path: modules/wordpress/main.yaml
-#     params:
-#       actionName: "create"
-#       namespaces: 1
-#       tuningSet: Sequence
-#       operationTimeout: 15m
-#
-# - module:
-#     path: modules/nodeport/main.yaml
-#     params:
-#       actionName: "create"
-#       namespaces: 1
-#       tuningSet: Sequence
-#       operationTimeout: 15m
-#
-# - module:
-#     path: modules/ingress/main.yaml
-#     params:
-#       actionName: "create"
-#       namespaces: 1
-#       tuningSet: Sequence
-#       operationTimeout: 15m
-#
-# - module:
-#     path: modules/env-test/main.yaml
-#     params:
-#       actionName: "create"
-#       namespaces: 1
-#       tuningSet: Sequence
-#       operationTimeout: 15m
-#
-# - module:
-#     path: modules/html-test/main.yaml
-#     params:
-#       actionName: "create"
-#       namespaces: 1
-#       tuningSet: Sequence
-#       operationTimeout: 15m
-#
-# - module:
-#    path: modules/pvc-test/main.yaml
-#    params:
-#      actionName: "create"
-#      namespaces: 1
-#      tuningSet: Sequence
-#      operationTimeout: 15m
 
+ - module:
+     path: modules/label-test/main.yaml
+     params:
+       actionName: "create"
+       namespaces: 1
+       tuningSet: Sequence
+       operationTimeout: 15m
 
-# Not ready modules
+ - module:
+     path: modules/wordpress/main.yaml
+     params:
+       actionName: "create"
+       namespaces: 1
+       tuningSet: Sequence
+       operationTimeout: 15m
 
-#  - module:
-#      path: modules/resource-test/main.yaml
-#      params:
-#        actionName: "create"
-#        namespaces: 1
-#        tuningSet: Sequence
-#        operationTimeout: 15m
+ - module:
+     path: modules/nodeport/main.yaml
+     params:
+       actionName: "create"
+       namespaces: 1
+       tuningSet: Sequence
+       operationTimeout: 15m
+
+ - module:
+     path: modules/ingress/main.yaml
+     params:
+       actionName: "create"
+       namespaces: 1
+       tuningSet: Sequence
+       operationTimeout: 15m
+
+ - module:
+     path: modules/env-test/main.yaml
+     params:
+       actionName: "create"
+       namespaces: 1
+       tuningSet: Sequence
+       operationTimeout: 15m
+
+ - module:
+     path: modules/html-test/main.yaml
+     params:
+       actionName: "create"
+       namespaces: 1
+       tuningSet: Sequence
+       operationTimeout: 15m
+
+ - module:
+     path: modules/pvc-test/main.yaml
+     params:
+       actionName: "create"
+       namespaces: 1
+       tuningSet: Sequence
+       operationTimeout: 15m
+
+ - module:
+     path: modules/resource-test/main.yaml
+     params:
+       actionName: "create"
+       namespaces: 1
+       tuningSet: Sequence
+       operationTimeout: 15m
 
 # - module:
 #     path: modules/health-check-test/main.yaml
@@ -138,26 +135,18 @@ steps:
 #       tuningSet: Sequence
 #       operationTimeout: 15m
 
-#  - module:
-#      path: modules/clusterip/main.yaml
-#      params:
-#        actionName: "create"
-#        namespaces: 1
-#        tuningSet: Sequence
-#        operationTimeout: 15m
+ - module:
+     path: modules/clusterip/main.yaml
+     params:
+       actionName: "create"
+       namespaces: 1
+       tuningSet: Sequence
+       operationTimeout: 15m
 
-#  - module:
-#      path: modules/upgrade-strategy-test/main.yaml
-#      params:
-#        actionName: "create"
-#        namespaces: 1
-#        tuningSet: Sequence
-#        operationTimeout: 15m
-
-#  - module:
-#      path: modules/test-demo/main.yaml
-#      params:
-#        actionName: "create"
-#        namespaces: 1
-#        tuningSet: Sequence
-#        operationTimeout: 15m
+ - module:
+     path: modules/upgrade-strategy-test/main.yaml
+     params:
+       actionName: "create"
+       namespaces: 1
+       tuningSet: Sequence
+       operationTimeout: 15m
