--- a/modules/access-type-test/nodeport-deploy.yaml
+++ b/modules/access-type-test/nodeport-deploy.yaml
@@ -16,6 +16,6 @@ spec:
         group: access-type-test
     spec:
       containers:
-        - image: 'hub.ecns.io/library/centos:alltools'
+        - image: 'centos:latest'
           imagePullPolicy: IfNotPresent
           name: nodeport-deploy
