--- a/modules/clusterip/clsip-httpd-sts.yaml
+++ b/modules/clusterip/clsip-httpd-sts.yaml
@@ -18,7 +18,7 @@ spec:
         group: cluster-ip
     spec:
       containers:
-        - image: 'hub.ecns.io/library/httpd:latest'
+        - image: 'httpd:latest'
           name: httpd
           resources:
             limits:
