--- a/modules/health-check-test/health-check-tcp-deploy.yaml
+++ b/modules/health-check-test/health-check-tcp-deploy.yaml
@@ -20,7 +20,7 @@ spec:
         group: health-check-test
     spec:
       containers:
-        - image: 'hub.ecns.io/library/nginx:latest'
+        - image: 'nginx:latest'
           imagePullPolicy: IfNotPresent
           name: health-check-tcp-deploy
           livenessProbe:
