--- a/modules/nodeport/nodeport-dpm.yaml
+++ b/modules/nodeport/nodeport-dpm.yaml
@@ -16,5 +16,5 @@ spec:
         group: nodeport
     spec:
       containers:
-      - image: 'hub.ecns.io/library/nginx:latest'
+      - image: 'nginx:latest'
         name: nginx
