--- a/modules/scaling-strategy-test-(notrdy)/scaling-strategy-deploy3.yaml
+++ b/modules/scaling-strategy-test-(notrdy)/scaling-strategy-deploy3.yaml
@@ -16,7 +16,7 @@ spec:
         group: upgrade-strategy-test
     spec:
       containers:
-        - image: 'hub.ecns.io/library/nginx:latest'
+        - image: 'nginx:latest'
           imagePullPolicy: IfNotPresent
           name: scaling-strategy-deploy3
         
