--- a/modules/upgrade-strategy-test/upgrade-strategy-deploy2.yaml
+++ b/modules/upgrade-strategy-test/upgrade-strategy-deploy2.yaml
@@ -21,7 +21,7 @@ spec:
         group: upgrade-strategy-test
     spec:
       containers:
-        - image: 'hub.ecns.io/library/nginx:latest'
+        - image: 'nginx:latest'
           imagePullPolicy: IfNotPresent
           name: upgrade-strategy-deploy2
         
