--- a/modules/command-test/command-deploy3.yaml
+++ b/modules/command-test/command-deploy3.yaml
@@ -16,7 +16,7 @@ spec:
         group: command-test
     spec:
       containers:
-        - image: 'hub.ecns.io/library/centos:alltools'
+        - image: 'centos:latest'
           imagePullPolicy: IfNotPresent
           name: command-deploy3
           lifecycle:
