--- a/modules/env-test/envtest-dpm.yaml
+++ b/modules/env-test/envtest-dpm.yaml
@@ -22,7 +22,7 @@ spec:
                 configMapKeyRef:
                   key: VERSION
                   name: envtest-configmap
-          image: 'hub.ecns.io/library/nginx:latest'
+          image: 'nginx:latest'
           name: nginx
 
 
