--- a/modules/upgrade-strategy-test/upgrade-strategy-deploy4.yaml
+++ b/modules/upgrade-strategy-test/upgrade-strategy-deploy4.yaml
@@ -18,7 +18,7 @@ spec:
         group: upgrade-strategy-test
     spec:
       containers:
-        - image: 'hub.ecns.io/library/nginx:latest'
+        - image: 'nginx:latest'
           imagePullPolicy: IfNotPresent
           name: upgrade-strategy-deploy4
         
