--- a/modules/upgrade-strategy-test/upgrade-strategy-deploy7.yaml
+++ b/modules/upgrade-strategy-test/upgrade-strategy-deploy7.yaml
@@ -21,6 +21,6 @@ spec:
         group: upgrade-strategy-test
     spec:
       containers:
-        - image: 'hub.ecns.io/library/nginx:latest'
+        - image: 'nginx:latest'
           imagePullPolicy: IfNotPresent
           name: upgrade-strategy-deploy7
