--- a/modules/upgrade-strategy-test/upgrade-strategy-dms4.yaml
+++ b/modules/upgrade-strategy-test/upgrade-strategy-dms4.yaml
@@ -14,7 +14,7 @@ spec:
         workload.es.io: daemonset.upgrade-strategy-dms4
     spec:
       containers:
-        - image: 'hub.ecns.io/library/nginx:latest'
+        - image: 'nginx:latest'
           imagePullPolicy: IfNotPresent
           name: upgrade-strategy-dms4
   updateStrategy:
